# vibe-image-comparator

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.claude/: settings.json
.github/: CONTRIBUTING.md
src/: cache.rs  config.rs  hasher.rs  hex.rs  lib.rs  main.rs  scanner.rs  server.rs
src/tests/: integration_tests.rs
static/: index.html  styles.css
tests/: integration_tests.rs
