[package]
name = "vibe-image-comparator"
version = "0.1.0"
edition = "2021"
description = "A fast Rust CLI tool for finding duplicate images using rotation-invariant perceptual hashing"
repository = "https://github.com/yaleman/vibe-image-comparator"
license = "MIT"
keywords = ["images", "duplicates", "perceptual", "hash", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
authors = ["yaleman"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.8"
imghash = "1.5.0"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
walkdir = "2.5.0"
gif = "0.13.3"

# Web server dependencies
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"

[features]
default = []

[dev-dependencies]
tempfile = "3.23.0"
