[package]
name = "vibe-image-comparator"
version = "0.1.0"
edition = "2021"
description = "A fast Rust CLI tool for finding duplicate images using rotation-invariant perceptual hashing"
repository = "https://github.com/yaleman/vibe-image-comparator"
license = "MIT"
keywords = ["images", "duplicates", "perceptual", "hash", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
authors = ["yaleman"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.9"
imghash = "1.5.0"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
walkdir = "2.5.0"
gif = "0.14.1"

# Web server dependencies
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"

[features]
default = []

[dev-dependencies]
tempfile = "3.25.0"
